# Spine

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build-unix.sh
cmake/: FindEasyFind.cmake  addToBinDir.cmake  common.cmake  searchDependencies.cmake  variables.cmake
config/: Config.h.in  RSAKey.h  ServerConfig.h.in  Spine_Version.xml  changelog.xml  icon.rc  setup.nsi.in
css/: darkStyles.css  dark_theme_for_spine_app.css  monokai.css  styles.css
dependencies/: build.ps1  (+27 more)
src/: CMakeLists.txt
src/api/: API.cpp  APIMessage.cpp  CMakeLists.txt  Friends.cpp  Gamepad.cpp  Multiplayer.cpp  Statistics.cpp  zString.cpp
src/argumentPrinter/: CMakeLists.txt  main.cpp
src/automaticTranslator/: CMakeLists.txt  main.cpp
src/cleanup/: CMakeLists.txt  main.cpp
src/cleanup/resources/: resources.qrc
src/client/: CMakeLists.txt  Config.cpp  Database.cpp  DatabaseFilterModel.cpp  DirValidator.cpp  DirectXVersionCheck.cpp  FileDownloader.cpp  IconCache.cpp  ImpressionUpdater.cpp  LibraryFilterModel.cpp  ManagementCommon.cpp  MissingMetadataChecker.cpp  MultiFileDownloader.cpp  ReportGenerator.cpp  RtfToHtmlConverter.cpp  SavegameManager.cpp  ScreenshotManager.cpp  SteamProcess.cpp  Uninstaller.cpp  UrlProtocolHandler.cpp  WindowsExtensions.cpp  main.cpp
src/client/gamepad/: KeyMapping.cpp  XBoxController.cpp
src/client/launcher/: GameLauncher.cpp  Gothic1And2Launcher.cpp  Gothic1Launcher.cpp  Gothic2Launcher.cpp  Gothic3Launcher.cpp  ILauncher.cpp  LauncherFactory.cpp
src/client/models/: CustomStatisticsModel.cpp  SpineEditorModel.cpp
src/client/resources/: invalidFileChars.txt  resources.qrc
src/client/security/: Hash.cpp
src/client/translator/: GothicParser.cpp  TranslationApplier.cpp
src/client/widgets/: AboutDialog.cpp  AccessRightsDialog.cpp  AchievementInfoView.cpp  AchievementOrientationPreview.cpp  AchievementSpineSettingsWidget.cpp  AchievementView.cpp  AddFriendDialog.cpp  ApplyTranslationDialog.cpp  AutoUpdateDialog.cpp  CenteredIconDelegate.cpp  ChangelogDialog.cpp  DeveloperSettingsWidget.cpp  DownloadProgressDialog.cpp  ExportDialog.cpp  FAQDialog.cpp  FAQEntry.cpp  FeedbackDialog.cpp  FriendRequestView.cpp  FriendsListView.cpp  FriendsView.cpp  FullscreenPreview.cpp  GameSettingsWidget.cpp  GamepadSettingsWidget.cpp  GamepadSpineSettingsWidget.cpp  GeneralSettingsWidget.cpp  GeneralSpineSettingsWidget.cpp  Gothic1IniWidget.cpp  Gothic2IniWidget.cpp  HiddenAchievementsView.cpp  ImportDialog.cpp  IniConfigurator.cpp  InstallGothic2FromCDDialog.cpp  IntegrityCheckDialog.cpp  LeGoSpineSettingsWidget.cpp  LibraryListView.cpp  LocationSettingsWidget.cpp  LoginDialog.cpp  MainWindow.cpp  ManagementDialog.cpp  ModDatabaseView.cpp  (+25 more)
src/client/widgets/gothic2IniPages/: ControlsPage.cpp  EnginePage.cpp  GamePage.cpp  PerformancePage.cpp  SoundPage.cpp  VideoPage.cpp  VisualizationPage.cpp
src/client/widgets/gothicIniPages/: ControlsPage.cpp  EnginePage.cpp  GamePage.cpp  PerformancePage.cpp  SoundPage.cpp  VideoPage.cpp  VisualizationPage.cpp
src/client/widgets/management/: AchievementWidget.cpp  AchievementsWidget.cpp  CustomStatisticsWidget.cpp  EnterChangelogDialog.cpp  GeneralConfigurationWidget.cpp  ModFilesWidget.cpp  ScoresWidget.cpp  StatisticsWidget.cpp  SurveyAnswersWidget.cpp  SurveyEditWidget.cpp  SurveyEntryWidget.cpp  SurveyWidget.cpp  UserManagementWidget.cpp
src/client/widgets/systempackIniPages/: GamePage.cpp  SystemPage.cpp
src/common/: CMakeLists.txt  Encryption.cpp  MessageStructs.cpp  TranslationModel.cpp
src/databaseAdder/: CMakeLists.txt  main.cpp
src/discord/: CMakeLists.txt  DiscordManager.cpp
src/g2oChecker/: CMakeLists.txt  main.cpp
src/gamepad/: CMakeLists.txt  GamepadSettingsWidget.cpp  KeyMapping.cpp  XBoxController.cpp
src/gui/: CMakeLists.txt  DontShowAgainDialog.cpp  DownloadEntryWidget.cpp  DownloadQueueWidget.cpp  FullscreenPreview.cpp  OverlayMessageHandler.cpp  ReportContentDialog.cpp  Spoiler.cpp  WaitSpinner.cpp
src/hashEvaluator/: CMakeLists.txt  main.cpp
src/https/: CMakeLists.txt  Https.cpp
src/imageResizer/: CMakeLists.txt  main.cpp
src/input/: CMakeLists.txt  KeyMapping.cpp
src/keyWrapper/: CMakeLists.txt  main.cpp
src/modChecker/: CMakeLists.txt  g1.txt  g2.txt  main.cpp  resources.qrc
src/modCheckerListCreator/: CMakeLists.txt  main.cpp
src/multiHasher/: CMakeLists.txt  main.cpp
src/referenceFinder/: CMakeLists.txt  main.cpp
src/security/: CMakeLists.txt  Hash.cpp
src/server/: CMakeLists.txt  Cleanup.cpp  DatabaseCreator.cpp  DatabaseMigrator.cpp  DatabaseServer.cpp  DownloadSizeChecker.cpp  FileSynchronizer.cpp  GMPServer.cpp  LanguageConverter.cpp  ManagementServer.cpp  MariaDBWrapper.cpp  MatchmakingServer.cpp  RamChecker.cpp  Server.cpp  ServerCommon.cpp  Smtp.cpp  SpineLevel.cpp  StatsCollector.cpp  TranslatorServer.cpp  UploadServer.cpp  main.cpp
src/takeFinder/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt  main.cpp  test_GothicParser.cpp  test_GothicVdf.cpp
src/tests/resources/test1/: dialogs.txt  test.d
src/tests/resources/test2/: dialogs.txt  test.d  texts.txt
src/tests/resources/test3/: names.txt  test.d
src/tests/resources/test4/: test.d  texts.txt
src/tests/resources/test5/: dialogs.txt  test.d  texts.txt
src/translator/: AccessRightsDialog.cpp  ApplyTranslationDialog.cpp  CMakeLists.txt  GothicParser.cpp  TranslationApplier.cpp  TranslationRequestDialog.cpp  TranslationWidget.cpp  TranslatorAPI.cpp  TranslatorDialog.cpp
src/ttsCreator/: CMakeLists.txt  main.cpp
src/unusedIDFinder/: CMakeLists.txt  main.cpp
src/utils/: CMakeLists.txt  Compression.cpp  Config.cpp  Database.cpp  DownloadQueue.cpp  ErrorReporting.cpp  FileDownloader.cpp  FileLogger.cpp  GothicVdf.cpp  Hashing.cpp  ImageMerger.cpp  Language.cpp  LanguageConverter.cpp  MultiFileDownloader.cpp  WindowsExtensions.cpp
src/variableChecker/: CMakeLists.txt  main.cpp
src/zipper/: CMakeLists.txt  main.cpp
tutorials/: CMakeLists.txt  Erfolge.tex  Friends.tex  Gamepad.tex  Initialization.tex  Multiplayer.tex  OverallSave.tex  Scores.tex  header.tex  tutorial_template.tex
(+257 files in other folders)
