ADD_SUBDIRECTORY(common)
IF(WITH_TOOLS)
	IF(WITH_CLIENT)
		ADD_SUBDIRECTORY(argumentPrinter)
		IF(WITH_TRANSLATOR)
			ADD_SUBDIRECTORY(automaticTranslator)
		ENDIF(WITH_TRANSLATOR)
		ADD_SUBDIRECTORY(hashEvaluator)
		ADD_SUBDIRECTORY(imageResizer)
		ADD_SUBDIRECTORY(keyWrapper)
		ADD_SUBDIRECTORY(modChecker)
		ADD_SUBDIRECTORY(multiHasher)
		ADD_SUBDIRECTORY(referenceFinder)
		ADD_SUBDIRECTORY(takeFinder)
		ADD_SUBDIRECTORY(ttsCreator)
		ADD_SUBDIRECTORY(unusedIDFinder)
		ADD_SUBDIRECTORY(zipper)
	ENDIF(WITH_CLIENT)
	IF(WITH_SERVER)
		ADD_SUBDIRECTORY(databaseAdder)
	ENDIF(WITH_SERVER)
ENDIF(WITH_TOOLS)
IF(WITH_API)
	ADD_SUBDIRECTORY(api)
ENDIF(WITH_API)
IF(WITH_CLIENT)
	ADD_SUBDIRECTORY(cleanup)
	ADD_SUBDIRECTORY(client)
	ADD_SUBDIRECTORY(gui)
	ADD_SUBDIRECTORY(https)
	ADD_SUBDIRECTORY(security)
	ADD_SUBDIRECTORY(tests) #requires Qt
	IF(WITH_TRANSLATOR)
		ADD_SUBDIRECTORY(translator)
	ENDIF(WITH_TRANSLATOR)
	ADD_SUBDIRECTORY(utils)
ENDIF(WITH_CLIENT)
IF(WITH_SERVER)
	ADD_SUBDIRECTORY(server)
ENDIF(WITH_SERVER)

