IF(WITH_CLIENT)
	find_package(LATEX)
	
	configure_file(header.tex ${CMAKE_CURRENT_BINARY_DIR}/header.tex COPYONLY)
	configure_file(Initialization.tex ${CMAKE_CURRENT_BINARY_DIR}/Initialization.tex COPYONLY)
	configure_file(Erfolge.tex ${CMAKE_CURRENT_BINARY_DIR}/Erfolge.tex COPYONLY)
	configure_file(Scores.tex ${CMAKE_CURRENT_BINARY_DIR}/Scores.tex COPYONLY)
	configure_file(OverallSave.tex ${CMAKE_CURRENT_BINARY_DIR}/OverallSave.tex COPYONLY)
	configure_file(Multiplayer.tex ${CMAKE_CURRENT_BINARY_DIR}/Multiplayer.tex COPYONLY)
	configure_file(Gamepad.tex ${CMAKE_CURRENT_BINARY_DIR}/Gamepad.tex COPYONLY)
	configure_file(Friends.tex ${CMAKE_CURRENT_BINARY_DIR}/Friends.tex COPYONLY)

	add_custom_target(CompileTutorials COMMAND ${PDFLATEX_COMPILER} ${CMAKE_CURRENT_BINARY_DIR}/Initialization.tex WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
	add_custom_command(TARGET CompileTutorials POST_BUILD COMMAND htlatex ${CMAKE_CURRENT_BINARY_DIR}/Initialization.tex WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
	add_custom_command(TARGET CompileTutorials POST_BUILD COMMAND ${PDFLATEX_COMPILER} ${CMAKE_CURRENT_BINARY_DIR}/Erfolge.tex WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
	add_custom_command(TARGET CompileTutorials POST_BUILD COMMAND htlatex ${CMAKE_CURRENT_BINARY_DIR}/Erfolge.tex WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
	add_custom_command(TARGET CompileTutorials POST_BUILD COMMAND ${PDFLATEX_COMPILER} ${CMAKE_CURRENT_BINARY_DIR}/Scores.tex WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
	add_custom_command(TARGET CompileTutorials POST_BUILD COMMAND htlatex ${CMAKE_CURRENT_BINARY_DIR}/Scores.tex WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
	add_custom_command(TARGET CompileTutorials POST_BUILD COMMAND ${PDFLATEX_COMPILER} ${CMAKE_CURRENT_BINARY_DIR}/OverallSave.tex WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
	add_custom_command(TARGET CompileTutorials POST_BUILD COMMAND htlatex ${CMAKE_CURRENT_BINARY_DIR}/OverallSave.tex WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
	add_custom_command(TARGET CompileTutorials POST_BUILD COMMAND ${PDFLATEX_COMPILER} ${CMAKE_CURRENT_BINARY_DIR}/Multiplayer.tex WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
	add_custom_command(TARGET CompileTutorials POST_BUILD COMMAND htlatex ${CMAKE_CURRENT_BINARY_DIR}/Multiplayer.tex WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
	add_custom_command(TARGET CompileTutorials POST_BUILD COMMAND ${PDFLATEX_COMPILER} ${CMAKE_CURRENT_BINARY_DIR}/Gamepad.tex WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
	add_custom_command(TARGET CompileTutorials POST_BUILD COMMAND htlatex ${CMAKE_CURRENT_BINARY_DIR}/Gamepad.tex WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
	add_custom_command(TARGET CompileTutorials POST_BUILD COMMAND ${PDFLATEX_COMPILER} ${CMAKE_CURRENT_BINARY_DIR}/Friends.tex WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
	add_custom_command(TARGET CompileTutorials POST_BUILD COMMAND htlatex ${CMAKE_CURRENT_BINARY_DIR}/Friends.tex WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
ENDIF()
